[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PlayGame.gd" type="Script" id=1]

[node name="PlayGame" type="VBoxContainer"]
margin_left = 59.0
margin_top = 34.0
margin_right = 699.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="."]
margin_right = 640.0
margin_bottom = 28.0
disabled = true
text = "TUTORIAL"
flat = true

[node name="JoinGame" type="Button" parent="."]
margin_top = 44.0
margin_right = 640.0
margin_bottom = 72.0
text = "JOIN GAME"
flat = true

[node name="CreateGame" type="Button" parent="."]
margin_top = 88.0
margin_right = 640.0
margin_bottom = 116.0
text = "CREATE GAME"
flat = true

[node name="Back" type="Button" parent="."]
margin_top = 132.0
margin_right = 640.0
margin_bottom = 160.0
text = "BACK"
flat = true

[node name="JoinGameDialog" type="WindowDialog" parent="."]
margin_top = 144.0
margin_right = 640.0
margin_bottom = 275.0
size_flags_vertical = 3
window_title = "JOIN_GAME"

[node name="JoinGameOptions" type="VBoxContainer" parent="JoinGameDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 8.0
margin_right = -16.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostnameLine" type="HBoxContainer" parent="JoinGameDialog/JoinGameOptions"]
margin_right = 608.0
margin_bottom = 24.0

[node name="Hostname" type="Label" parent="JoinGameDialog/JoinGameOptions/HostnameLine"]
margin_top = 5.0
margin_right = 66.0
margin_bottom = 19.0
text = "Hostname"

[node name="HostnameField" type="LineEdit" parent="JoinGameDialog/JoinGameOptions/HostnameLine"]
margin_left = 70.0
margin_right = 608.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "localhost"

[node name="Port" type="HBoxContainer" parent="JoinGameDialog/JoinGameOptions"]
margin_top = 28.0
margin_right = 608.0
margin_bottom = 52.0

[node name="Port" type="Label" parent="JoinGameDialog/JoinGameOptions/Port"]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 19.0
text = "Port"

[node name="PortField" type="LineEdit" parent="JoinGameDialog/JoinGameOptions/Port"]
margin_left = 30.0
margin_right = 608.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PlayerName" type="HBoxContainer" parent="JoinGameDialog/JoinGameOptions"]
margin_left = -9.0
margin_right = 49.0
margin_bottom = 40.0
grow_horizontal = 2

[node name="PlayerNameField" type="LineEdit" parent="JoinGameDialog/JoinGameOptions/PlayerName"]
margin_right = 58.0
margin_bottom = 32.0

[node name="Connect" type="Button" parent="JoinGameDialog/JoinGameOptions"]
margin_top = 56.0
margin_right = 608.0
margin_bottom = 76.0
text = "CONNECT"

[node name="CreateGameDialog" type="WindowDialog" parent="."]
margin_top = 144.0
margin_right = 640.0
margin_bottom = 234.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Create Game"

[node name="CreateGameOptions" type="VBoxContainer" parent="CreateGameDialog"]
anchor_right = 1.0
anchor_bottom = 0.956
margin_bottom = -0.0400009
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortLine" type="HBoxContainer" parent="CreateGameDialog/CreateGameOptions"]
margin_right = 640.0
margin_bottom = 24.0

[node name="Port" type="Label" parent="CreateGameDialog/CreateGameOptions/PortLine"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "Port"

[node name="PortField" type="LineEdit" parent="CreateGameDialog/CreateGameOptions/PortLine"]
margin_left = 38.0
margin_right = 640.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PlayerName" type="HBoxContainer" parent="CreateGameDialog/CreateGameOptions"]
margin_left = 7.0
margin_top = 8.0
margin_right = 65.0
margin_bottom = 48.0
grow_horizontal = 2

[node name="PlayerNameField" type="LineEdit" parent="CreateGameDialog/CreateGameOptions/PlayerName"]
margin_right = 58.0
margin_bottom = 32.0

[node name="Create" type="Button" parent="CreateGameDialog/CreateGameOptions"]
margin_top = 28.0
margin_right = 640.0
margin_bottom = 56.0
text = "CREATE"
[connection signal="pressed" from="JoinGame" to="." method="_on_JoinGame_pressed"]
[connection signal="pressed" from="CreateGame" to="." method="_on_CreateGame_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="JoinGameDialog/JoinGameOptions/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="CreateGameDialog/CreateGameOptions/Create" to="." method="_on_Create_pressed"]
